# personal-ai-project

./: README.md  example-0.json  example.html  example.json  project-data-process-02.ipynb  project-data-process.ipynb  project-queries-prompts-02.ipynb  project-queries-prompts.ipynb  pyproject.toml
.ipynb_checkpoints/: project-data-process-checkpoint.ipynb
personal-ai-project/: __init__.py  helper_functions.py
